# totem

./: .gitignore  README.md  build.yaml  docker-compose.yml  flake.nix  justfile
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  app.tsx  index.css  main.tsx  toml.d.ts
app/src-tauri/: Cargo.toml  build.rs  proto  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: battery.rs  build.rs  lib.rs  main.rs  vial.rs
app/src-tauri/src/keymap/: parser.rs  serializer.rs  types.rs
app/src-tauri/src/studio/: framing.rs  hid_usage.rs  mod.rs  transport.rs
app/udev/: 99-totem.rules
assets/: sd_eraser.uf2
config/: totem.conf  totem.keymap  totem_settings_reset.conf
docker/: Dockerfile.app  Dockerfile.rmk
docs/: zmk-features.md
docs/plans/: 2026-02-19-keymap-editor-design.md  2026-02-19-keymap-editor-plan.md
firmware/: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  keyboard-dongle.toml  keyboard.toml  keyboard.toml.bak  vial.json
rmk/: Cargo.toml  keyboard.toml
rmk-firmware/: keyboard.toml  keyboard.toml.bak
rmk/src/: behavior.rs  central.rs  dongle.rs  dongle_peripheral.rs  dongle_peripheral2.rs  keymap.rs  peripheral.rs  vial.rs
tools/: gen_sd_eraser.py  gen_storage_eraser.py  gen_svg_layers.py
zmk/: flake.nix
zmk-firmware/: build.yaml  flake.nix
zmk-firmware/config/: combos.dtsi.full  totem.conf  totem.keymap  totem.keymap.full
zmk/config/: totem.conf  totem.keymap  (+5 more)
(+53 files in other folders)
