[package]
name = "totem"
version = "0.1.0"
description = "TOTEM keyboard configurator"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "totem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
prost = "0.13"
serialport = "4"
btleplug = "0.11"
uuid = "1"
tokio-stream = "0.1"
